2001-04-17  David S. Miller  <davem@redhat.com>

	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: Update for new atan2 tests.
	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Likewise.

2001-04-17  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ieee754/ldbl-128/e_logl.c (__ieee754_logl): Make sure
	desired exceptions are raised for exceptional values.
	* math/libm-test.inc (acosh_test, atan_test, atan2_test, cacos_test,
	cacosh_test, casin_test, casinh_test, catan_test, catanh_test,
	clog_test, log_test, log1p_test, tan_test): Increase precision of
	expected values to satisfy ldbl-128.
	* sysdeps/alpha/fpu/libm-test-ulps: Adjust accordingly.
	* sysdeps/arm/libm-test-ulps: Likewise.
	* sysdeps/i386/fpu/libm-test-ulps: Likewise.
	* sysdeps/ia64/fpu/libm-test-ulps: Likewise.
	* sysdeps/m68k/fpu/libm-test-ulps: Likewise.
	* sysdeps/mips/fpu/libm-test-ulps: Likewise.
	* sysdeps/powerpc/fpu/libm-test-ulps: Likewise.
	* sysdeps/s390/fpu/libm-test-ulps: Likewise.
	* sysdeps/sh/sh4/fpu/libm-test-ulps: Likewise.
	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: Likewise.
	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Likewise.

2001-04-17  Andreas Jaeger  <aj@suse.de>

	* configure.in: Move test for critical programs up.

2001-04-16  Stephen L Moshier  <moshier@mediaone.net>

	* sysdeps/ieee754/flt-32/e_asinf.c (pio2_hi, pio2_lo, pio4_hi):
	Correct the values. (pSx, qSx): Replace by shorter approximation.
	Use f suffix on float constants.

2001-04-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ieee754/ldbl-128/k_tanl.c: New file.
	Contributed by Stephen L Moshier <moshier@mediaone.net>.

	* string/string.h: Replace const in attribute list with __const__.

2001-04-16  Roland McGrath  <roland@frob.com>

	* grp/initgroups.c (initgroups) [NGROUPS_MAX != 0]: Always use sysconf
	instead of the constant NGROUPS_MAX.  That way, the limit can be
	raised in the kernel configuration without having to recompile libc.

	* sysdeps/posix/euidaccess.c: Don't #include <limits.h> or try to