@@ -920,10 +920,10 @@ atan2_test (void)
 
   TEST_ff_f (atan2, 0.7L, 1, 0.61072596438920861654375887649023613L);
   TEST_ff_f (atan2, -0.7L, 1.0L, -0.61072596438920861654375887649023613L);
-  TEST_ff_f (atan2, 0.7L, -1.0L, 2.5308666892005846219L);
-  TEST_ff_f (atan2, -0.7L, -1.0L, -2.5308666892005846219L);
+  TEST_ff_f (atan2, 0.7L, -1.0L, 2.530866689200584621918884506789267L);
+  TEST_ff_f (atan2, -0.7L, -1.0L, -2.530866689200584621918884506789267L);
   TEST_ff_f (atan2, 0.4L, 0.0003L, 1.5700463269355215717704032607580829L);
-  TEST_ff_f (atan2, 1.4L, -0.93L, 2.1571487668237843755L);
+  TEST_ff_f (atan2, 1.4L, -0.93L, 2.1571487668237843754887415992772736L);
 
   END (atan2);
 }
