@@ -32,13 +32,13 @@ double: 1
 idouble: 1
 
 # atan2
-Test "atan2 (0.7, -1.0) == 2.5308666892005846219":
+Test "atan2 (0.7, -1.0) == 2.530866689200584621918884506789267":
 float:  3.0000
 ifloat:  3.0000
-Test "atan2 (-0.7, -1.0) == -2.5308666892005846219":
+Test "atan2 (-0.7, -1.0) == -2.530866689200584621918884506789267":
 float:  3.0000
 ifloat:  3.0000
-Test "atan2 (1.4, -0.93) == 2.1571487668237843755":
+Test "atan2 (1.4, -0.93) == 2.1571487668237843754887415992772736":
 float:  4.0000
 ifloat:  4.0000
 Function: "atan2":
